# bevytest

./: .gitignore  Cargo.toml  notes.txt
assets/: elf_m.aseprite
src/: client.rs  m.rs  main.rs  protocol.rs  renderer.rs  server.rs  settings.rs  shared.rs
