[package]
name = "bevytest"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.2", default-features = false }
lightyear = { version = "0.19.0", default-features = false }
lightyear_examples_common = { version = "0.19.0", default-features = false }
serde = "1.0.217"
# lightyear = "0.19.0"
# bevy = { version = "0.15.1" } # default-features = false, features = [""] }
# lightyear_examples_common = "0.19.0"
# serde = "1.0.217"

[features]
default = ["client", "server", "gui"]
# websocket = ["lightyear_examples_common/websocket"]
client = ["lightyear_examples_common/client", "gui"]
server = ["lightyear_examples_common/server"]
gui = ["lightyear_examples_common/gui"]
# steam = ["lightyear_examples_common/steam"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
